--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon start"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.1",
