--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^1.3.3"
